<resources>
    <string name="app_name">Pubali</string>
    <string name="tv_hint_confirm_to_cancel">Confirm to cancel transaction?</string>
    <string name="tv_hint_do_not_print_customer_slip">Do not print customer slip?</string>
    <string name="toast_hint_ui_timeout">Operation timeout</string>
    <string name="tv_hint_remove_card">Please remove card</string>
    <string name="toast_hint_bind_service_failed">Bind device service failed.</string>
    <string name="menu_title_sale">SALE</string>
    <string name="menu_name_settlement">SETTLEMENT</string>
    <string name="toast_hint_low_power">Low power, please recharge</string>
    <string name="toast_hint_trans_not_allow">Transaction not allow</string>
    <string name="toast_hint_do_settlement_first">Please do settlement first.</string>
    <string name="toast_hint_over_amount_do_settlement_first">Over maximum amount, please do settlement first.</string>
    <string name="toast_hint_over_count_do_settlement_first">Over maximum count, please do settlement first.</string>
    <string name="toast_hint_init_trans_exception">Initialize transaction exception.</string>
    <string name="title_sale">SALE</string>
    <string name="title_settlement">SETTLEMENT</string>
    <string name="tv_hint_tap">Tap</string>
    <string name="tv_hint_insert">Insert</string>
    <string name="tv_hint_swipe">Swipe</string>
    <string name="tv_hint_amount">Amount</string>
    <string name="tv_hint_currency">BDT</string>
    <string name="btn_hint_cancel">Cancel</string>
    <string name="btn_hint_manual_input">Manual input</string>
    <string name="tv_hint_operation_cancelled">Operation cancelled</string>
    <string name="toast_hint_fallback">Fallback</string>
    <string name="tv_hint_please">Please</string>
    <string name="tv_hint_card">Card</string>
    <string name="tv_hint_check_card_failed">Check card failed.</string>
    <string name="tv_hint_check_card_timeout">Check card timeout.</string>
    <string name="tv_hint_track_key_not_found">Track key not found.</string>
    <string name="tv_hint_read_card_failed">READ CARD FAILED.</string>
    <string name="tv_hint_activate_card_failed">Activate CTLS card failed.</string>
    <string name="tv_hint_multi_card_conflict">Multi card conflict</string>
    <string name="tv_hint_invalid_card_info">Invalid card info</string>
    <string name="tv_hint_not_allow_swipe_chip_card">Not allow swipe chip card.</string>
    <string name="toast_hint_invalid_amount">Invalid amount</string>
    <string name="tv_hint_msg_input_amount">Please input amount</string>
    <string name="btn_hint_pay">Pay</string>
    <string name="tv_hint_input_tip_amount">Please input tip amount</string>
    <string name="tv_hint_processing">Processing</string>
    <string name="toast_hint_invalid_pan_number">Invalid PAN number</string>
    <string name="tv_hint_confirm_amount">CONFIRM AMOUNT</string>
    <string name="toast_hint_last_attempt_enter_pin">One last attempt allowed to enter PIN</string>
    <string name="toast_hint_wrong_pin">Wrong offline pin</string>
    <string name="toast_hint_retry_times">retry times</string>
    <string name="toast_hint_application_not_available">Application not available</string>
    <string name="tv_hint_trans_reject">Transaction rejected</string>
    <string name="tv_hint_offline_dda_failed">Offline dynamic data authentication Failed</string>
    <string name="tv_hint_app_blocked">Application blocked</string>
    <string name="tv_hint_pan_not_match_track2">PAN not match track2</string>
    <string name="tv_hint_card_validate_error">Card holder validate failed.</string>
    <string name="tv_hint_amount_exceeded_limit">Amount exceeded CTLS limit</string>
    <string name="tv_hint_card_blocked">Card blocked</string>
    <string name="tv_hint_read_rf_card_failed">Read rf card failed</string>
    <string name="tv_hint_script_not_execute">Script not execute</string>
    <string name="tv_hint_script_execute_failed">Script execution failed</string>
    <string name="tv_hint_no_script">No script found</string>
    <string name="tv_hint_too_many_script">Too many script</string>
    <string name="tv_hint_arpc_mismatch">ARPC mismatch</string>
    <string name="tv_hint_not_correct_card_type">Not TYPE b/PRO card</string>
    <string name="tv_hint_no_aid_and_capk">No AIDs and Capks found</string>
    <string name="select_card_app">Select card application</string>
    <string name="select_multi_host">Select Host</string>
    <string name="select_multi_merchant">Select Merchant</string>
    <string name="tv_hint_card_number">Card Number</string>
    <string name="tv_hint_card_holder">Card Holder</string>
    <string name="entry_pin">Entry Pin</string>
    <string name="tv_hint_enter_online_pin">Enter online PIN</string>
    <string name="tv_hint_enter_offline_pin">Enter offline PIN</string>
    <string name="tv_hint_network_nprocessing">Network Processing</string>
    <string name="btn_hint_back_to_main_menu">Back to main menu</string>
    <string name="tv_hint_success">Success</string>
    <string name="tv_hint_printing">Printing</string>
    <string name="btn_hint_reprint">Reprint</string>
    <string name="tv_hint_enter_pin">Please enter PIN</string>
    <string name="btn_hint_confirm">Confirm</string>
    <string name="subtitle_hint_void">Void</string>
    <string name="subtitle_hint_settlement">Settlement</string>
    <string name="toast_hint_please_input_pwd">Please input password!</string>
    <string name="toast_hint_wrong_passwd">Incorrect passwd!</string>
    <string name="toast_hint_user_name_not_exist">User name does not exist</string>
    <string name="tv_hint_please_input_trace_number">Please input trace number</string>
    <string name="toast_hint_please_input_trace_num">Please input trace number</string>
    <string name="toast_hint_not_found_org_trans">Not found the original transaction</string>
    <string name="tv_hint_cannot_void_trans_reenter">Cannot void transaction, please re-enter</string>
    <string name="tv_hint_ali_trans_id">PARTNER TRANSACTION ID:</string>
    <string name="tv_ref1">REF# 1:</string>
    <string name="tv_ref2">REF# 2:</string>
    <string name="tv_ref3">REF# 3:</string>
    <string name="tv_hint_ali_payment_id">PAYMENT ID:</string>
    <string name="thai_qr">Thai QR</string>
    <string name="tv_hint_thb">THB</string>
    <string name="tv_hint_amount_detail">Amount detail</string>
    <string name="tv_hint_base_amount">BASE AMT</string>
    <string name="tv_hint_tip_ajd">TIP ADJUST</string>
    <string name="tv_hint_total">TOTAL</string>
    <string name="btn_hint_next">Next</string>
    <string name="not_support_void">QRCS don\'t support Void</string>
    <string name="menu_name_void">VOID</string>
    <string name="button_confirm">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="tv_hint_error">Error</string>
    <string name="btn_print_slip_to_sign">Print slip to sign</string>
    <string name="menu_title_option">Option</string>
    <string name="option_history">History</string>
    <string name="option_setting">Setting</string>
    <string name="option_about">About</string>
    <string name="option_logout">Logout</string>
    <string name="option_load_configs">Load Configs</string>
    <string name="dialog_title_exit_option">Exit to main</string>
    <string name="dialog_message_exit_option">Do you need to exit to main menu?</string>
    <string name="option_load_configs_finished">Load configs finished.</string>
    <string name="toast_hint_stripe_reading_error">STRIPE READING ERROR</string>
    <string name="toast_hint_reading_error">READING ERROR</string>
    <string name="toast_hint_try_again">Y AGAIN</string>
    <string name="tv_hint_error_reading"></string>
    <string name="tv_hint_swipe_magnetic_card">SWIPE MAGNETIC CARD</string>
    <string name="tv_hint_remove_card_try_another_card">REMOVE CARD, TRY OTHER CARD</string>
    <string name="tv_hint_swipe_inset_type_card">SWIPE OR INSERT OR TYPE CARD</string>
    <string name="tv_hint_card_not_support">CARD NOT SUPPORT</string>
    <string name="tv_hint_try_another_card">TRY ANOTHER CARD</string>
    <string name="tv_hint_multi_card_present_one">MULTIPLE CARDS HAVE BEEN DETECTED AND THAT ONLY ONE SHOULD BE PRESENTED</string>
    <string name="tv_hint_card_no">Card No:</string>
    <string name="tv_hint_exp_date">Exp Date(MMYY):</string>
    <string name="tv_hint_transaction_reject">Transaction Reject</string>
    <string name="tv_hint_chip_cannot_be_read">CHIP CANNOT BE READ</string>
    <string name="tv_hint_card_type_not_support">CARD TYPE NOT SUPPORT</string>
    <string name="tv_hint_input_pin_cancelled">INPUT PIN CANCELLED</string>
    <string name="tv_hint_input_pin_timeout">INPUT PIN TIMEOUT</string>
    <string name="tv_hint_input_pin_exception">INPUT PIN EXCEPTION</string>
    <string name="toast_hint_bad_card_length">Bad Card Length</string>
    <string name="toast_hint_bad_account">Bad Account</string>
    <string name="tv_hint_trans_not_allowed">Transaction is not allowed</string>
    <string name="tv_hint_please_input_card_number">Please input card number</string>
    <string name="toast_hint_invalid_date">Invalid date</string>
    <string name="tv_hint_please_enter_card_expiry_date">Please enter card expiry date\n(MM/YY)</string>
    <string name="tv_hint_please_input_cvv2">Please input CVV2</string>
    <string name="please_input_correct_cvv2">Please input correct cvv2</string>
    <string name="tv_hint_comm_param_error">Communication parameter error</string>
    <string name="tv_hint_connect_failed">Connect failed</string>
    <string name="tv_hint_connect_timeout">Connect host timeout</string>
    <string name="tv_hint_send_data_failed">Send data failed</string>
    <string name="tv_hint_receive_data_failed">Receive data failed</string>
    <string name="dialog_hint_reversal_failed_retry">Reversal failed, retry again?</string>
    <string name="tv_hint_reversal_failed">Reversal failed</string>
    <string name="toast_hint_save_cardbin_failed">Save card bin failed</string>
    <string name="unknown_name">Unknown Name</string>
    <string name="tv_hint_currency_in_th_thb">THB</string>
    <string name="tv_hint_currency_in_th_usd">USD</string>
    <string name="tv_hint_currency_in_th_aud">AUD</string>
    <string name="tv_hint_currency_in_th_bhd">BHD</string>
    <string name="tv_hint_currency_in_th_bdt">BDT</string>
    <string name="tv_hint_currency_in_th_bnd">BND</string>
    <string name="tv_hint_currency_in_th_cad">CAD</string>
    <string name="tv_hint_currency_in_th_lkr">LKR</string>
    <string name="tv_hint_currency_in_th_cny">CNY</string>
    <string name="tv_hint_currency_in_th_dkk">DKK</string>
    <string name="tv_hint_currency_in_th_hkd">HKD</string>
    <string name="tv_hint_currency_in_th_inr">INR</string>
    <string name="tv_hint_currency_in_th_ils">ILS</string>
    <string name="tv_hint_currency_in_th_jpy">JPY</string>
    <string name="tv_hint_currency_in_th_krw">KRW</string>
    <string name="tv_hint_currency_in_th_myr">MYR</string>
    <string name="tv_hint_currency_in_th_omr">OMR</string>
    <string name="tv_hint_currency_in_th_npr">NPR</string>
    <string name="tv_hint_currency_in_th_nzd">NZD</string>
    <string name="tv_hint_currency_in_th_nok">NOK</string>
    <string name="tv_hint_currency_in_th_pkr">PKR</string>
    <string name="tv_hint_currency_in_th_php">TK</string>
    <string name="tv_hint_currency_in_th_qar">QAR</string>
    <string name="tv_hint_currency_in_th_sar">SAR</string>
    <string name="tv_hint_currency_in_th_sgd">SGD</string>
    <string name="tv_hint_currency_in_th_zar">ZRA</string>
    <string name="tv_hint_currency_in_th_sek">SEK</string>
    <string name="tv_hint_currency_in_th_chf">CHF</string>
    <string name="tv_hint_currency_in_th_aed">AED</string>
    <string name="tv_hint_currency_in_th_egp">EGP</string>
    <string name="option_reprint">Reprint</string>
</resources>