<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:context=".presentation.view.activities.option.OptionActivity">

    <include layout="@layout/layout_top_header" />

    <TextView
        android:id="@+id/tv_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/option_history"
        android:textSize="@dimen/dimen_option_text_size"
        android:textColor="@color/color_black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray" />

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/option_setting"
        android:textSize="@dimen/dimen_option_text_size"
        android:textColor="@color/color_black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray" />

    <TextView
        android:id="@+id/tv_reprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/option_reprint"
        android:textSize="@dimen/dimen_option_text_size"
        android:textColor="@color/color_black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray" />

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/option_about"
        android:textSize="@dimen/dimen_option_text_size"
        android:textColor="@color/color_black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray" />
    <TextView
        android:id="@+id/tv_app_soft_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="@dimen/dimen_option_text_size"
        android:textColor="@color/color_black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray" />
    <LinearLayout
        android:id="@+id/ll_load_configs"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_load_configs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/option_load_configs"
            android:textSize="@dimen/dimen_option_text_size"
            android:textColor="@color/color_black" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="15dp"
        android:textSize="@dimen/dimen_option_text_size"
        android:textColor="@color/color_black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray" />

    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/option_logout"
        android:textSize="@dimen/dimen_option_text_size"
        android:textColor="@color/color_red" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:background="@color/color_gray" />

</LinearLayout>
