<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_trans_result_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/icon_success" />

        <TextView
            android:id="@+id/tv_result_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/tv_hint_success"
            android:textColor="@color/color_white"
            android:textAllCaps="true"
            android:textSize="28sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lv_normal_trans_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/tv_hint_amount"
            android:textColor="@color/color_white"
            android:textSize="28sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_show_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0.00"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dimen_amount_text_size" />

        <TextView
            android:id="@+id/tv_show_currency_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_hint_currency"
            android:textColor="@color/color_white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_settlement_result_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/common_left_margin"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="3"
        android:background="@color/color_white"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_settlement_result_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="8">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_success"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_button_height"
        android:layout_gravity="center"
        android:background="#D1EDFF"
        android:gravity="center"
        android:text="@string/btn_hint_back_to_main_menu"
        android:textAllCaps="true"
        android:textColor="@color/color_btn_left_hint"
        android:textSize="@dimen/dimen_button_textsize" />
</LinearLayout>